Install polymer, update webcomponents polyfill include

--- a/views/partials/_webcomponents_polyfill.jade
+++ b/views/partials/_webcomponents_polyfill.jade
@@ -5,5 +5,5 @@ script.
     && 'content' in document.createElement('template')) {
     console.log("Using WebComponent Enabled Browser");
   } else {
-  document.write("<script src='/js/webcomponents.js'><\/script>");
+    document.write("<script src='/components/webcomponentsjs/webcomponents.js'><\/script>");
   }
