--- a/public/components/x-app/x-app.html
+++ b/public/components/x-app/x-app.html
@@ -1,1 +1,10 @@
 <link rel="import" href="../polymer/polymer.html">
+
+<polymer-element name="x-app" noscript>
+  <template>
+    <link rel="stylesheet" href="x-app-styles.css">
+    <h1>Web Component Demo</h1>
+    <h2>Non-Shadow DOM Content</h2>
+    <content></content>
+  </template>
+</polymer-element>
